--- a/AndTinder/src/main/res/values/attr.xml
+++ b/AndTinder/src/main/res/values/attr.xml
@@ -6,5 +6,9 @@
             <enum name="ordered" value="0"/>
             <enum name="disordered" value="1"/>
         </attr>
+        <attr name="fling_direction" format="enum">
+            <enum name="horizontal" value="0"/>
+            <enum name="vertical" value="1"/>
+        </attr>
     </declare-styleable>
 </resources>
